--- a/PartyHub_Project/static/css/Parties_css/party_details.css
+++ b/PartyHub_Project/static/css/Parties_css/party_details.css
@@ -159,8 +159,8 @@
 }
 
 .questions-section form textarea {
-    width: 100%;
-    height: 80px;
+    width: 90%;
+    height: 40px;
     resize: none;
     padding: 10px;
     border: 1px solid #ccc;
@@ -181,61 +181,20 @@
     transition: background-color 0.3s;
 }
 
-/*.questions-section .question-button:hover {*/
-/*    background-color: #0056b3;*/
-/*}*/
-
-/*!* Стилове за списъка с въпроси *!*/
-/*.questions-list {*/
-/*    margin-top: 20px;*/
-/*}*/
-
-/*.question {*/
-/*    padding: 10px;*/
-/*    margin-bottom: 15px;*/
-/*    border: 1px solid #ddd;*/
-/*    border-radius: 8px;*/
-/*    background-color: #fff;*/
-/*}*/
-
-/*.question p {*/
-/*    margin: 0;*/
-/*    font-size: 1rem;*/
-/*    line-height: 1.4;*/
-/*}*/
-
-/*.question strong {*/
-/*    color: #000000;*/
-/*}*/
-
-/*!* Стилове за отговорите *!*/
-/*.answer {*/
-/*    margin-top: 10px;*/
-/*    padding: 10px;*/
-/*    background-color: #e9f7ef;*/
-/*    border: 1px solid #d4edda;*/
-/*    border-radius: 6px;*/
-/*}*/
-
-/*.answer p {*/
-/*    margin: 0;*/
-/*    font-size: 0.95rem;*/
-/*    line-height: 1.4;*/
-/*    color: #155724;*/
-/*}*/
 
 /*!* Стилове за формата за отговор *!*/
-/*.answer form textarea {*/
-/*    width: 100%;*/
-/*    height: 50px;*/
-/*    resize: none;*/
-/*    padding: 8px;*/
-/*    border: 1px solid #ccc;*/
-/*    border-radius: 4px;*/
-/*    font-size: 0.95rem;*/
-/*}*/
+.answer form textarea {
+    width: 100%;
+    height: 40px;
+    resize: none;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 0.95rem;
+}
 
-.answer .answer-button {
+/*.answer*/
+.answer-button {
     margin-top: 8px;
     padding: 6px 12px;
     background-color: #28a745;
@@ -247,6 +206,19 @@
     transition: background-color 0.3s;
 }
 
-.answer .answer-button:hover {
+/*.answer */
+.answer-button:hover {
     background-color: #218838;
+}
+
+
+.answer_form {
+    width: 90%;
+    height: 40px;
+    resize: none;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1rem;
+    font-family: Arial, sans-serif;
 }
