--- a/PartyHub_Project/static/css/Parties_css/create_party.css
+++ b/PartyHub_Project/static/css/Parties_css/create_party.css
@@ -119,3 +119,35 @@ ul .error{
     height: 20px;
 }
 
+input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #000000;
+    border-radius: 4px;
+    position: relative;
+    margin: 0;
+    outline: none;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+}
+
+
+input[type="checkbox"]:checked {
+    background-color: #2ede13;
+    border-color: #2ede13;
+}
+
+input[type="checkbox"]:checked::before {
+    content: '✔';
+    font-size: 17px;
+    position: absolute;
+    bottom: 8px;
+    left: 2px;
+    width: 0;
+    height: 10px;
+    background-color: #2ede13;
+    border-radius: 2px;
+}
