Fix: fixed party delete button when party is over now deletes the party instantly

--- a/PartyHub_Project/static/css/Parties_css/create_party.css
+++ b/PartyHub_Project/static/css/Parties_css/create_party.css
@@ -151,3 +151,8 @@ input[type="checkbox"]:checked::before {
     background-color: #2ede13;
     border-radius: 2px;
 }
+
+
+.alert {
+    color: red;
+}
