--- a/PartyHub_Project/static/css/Parties_css/edit_party.css
+++ b/PartyHub_Project/static/css/Parties_css/edit_party.css
@@ -63,17 +63,48 @@
     background-color: #45a049;
 }
 
+/*.cancel-button {*/
+/*    display: inline-block;*/
+/*    color: #777;*/
+/*    text-decoration: none;*/
+/*    padding: 10px 20px;*/
+/*    font-size: 16px;*/
+/*    margin-top: 20px;*/
+/*}*/
+
+/*.cancel-button:hover {*/
+/*    text-decoration: underline;*/
+/*}*/
+
 .cancel-button {
     display: inline-block;
-    color: #777;
-    text-decoration: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    margin-top: 20px;
+    background-color: #f0f0f0; /* Светлосив фон */
+    color: #333; /* Тъмен текст */
+    text-decoration: none; /* Премахване на подчертаване */
+    border: 1px solid #ccc; /* Лека рамка */
+    border-radius: 8px; /* Закръглени ъгли */
+    padding: 8px 16px; /* Вътрешно отстояние */
+    font-size: 14px; /* Размер на текста */
+    font-weight: bold; /* Удебелен текст */
+    cursor: pointer; /* Ръка при задържане */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Лека сянка */
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease; /* Плавни преходи */
 }
 
 .cancel-button:hover {
-    text-decoration: underline;
+    background-color: #e0e0e0; /* По-тъмен сив фон при задържане */
+    color: #000; /* По-тъмен текст */
+    transform: translateY(-2px); /* Повдигане при задържане */
+}
+
+.cancel-button:active {
+    background-color: #d6d6d6; /* Още по-тъмен сив фон при натискане */
+    transform: translateY(0); /* Връща се в нормално положение */
+}
+
+.cancel-button:focus {
+    outline: none; /* Премахване на стандартния контур */
+    box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.5); /* Син контур за фокусиране */
 }
 
 .error-message {
@@ -84,4 +115,46 @@
 
 .error-message p {
     margin: 0;
+}
+
+input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #000000;
+    border-radius: 4px;
+    position: relative;
+    margin: 0;
+    outline: none;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+}
+
+
+input[type="checkbox"]:checked {
+    background-color: #2ede13;
+    border-color: #2ede13;
+}
+
+input[type="checkbox"]:checked::before {
+    content: '✔';
+    font-size: 17px;
+    position: absolute;
+    bottom: 10px;
+    left: 2px;
+    width: 0;
+    height: 10px;
+    background-color: #2ede13;
+    border-radius: 2px;
+}
+
+.form-group input[type="number"]{
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 14px;
+    color: #333;
+    width: 95%;
 }
