fix styles and removed async bullshit after 9 hours of trying

--- a/PartyHub_Project/static/css/Parties_css/create_party.css
+++ b/PartyHub_Project/static/css/Parties_css/create_party.css
@@ -69,6 +69,10 @@
     width: 95%;
 }
 
+.form-group select{
+    width: 98%;
+}
+
 .form-group input[type="datetime-local"] {
     font-size: 14px;
 }
